[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xauusd-volatility-filter"
version = "0.1.0"
description = "A PyTorch deep neural network pre-trade volatility filter for XAUUSD trading systems."
readme = "README.md"
authors = [
    { name = "Jeandre" }
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "black>=24.2.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

# Modern structured configuration layout
[tool.ruff.lint]
select = ["E", "F", "I", "W", "N"]
fixable = ["A", "B", "C", "D", "E", "F", "G", "I"]

[tool.ruff.lint.isort]
known-first-party = ["data_engine", "model", "train"]

[tool.ruff.lint.pep8-naming]
# Explicitly authorize standard machine learning uppercase matrix names
ignore-names = ["X", "X_train", "X_val", "X_test"]